Update: projet agrifund avec corrections